adjust the addUsersToCompany to filter out added users, and handle incorrect user ids in provided list